fix overflowing bars

--- a/src/common/kennzahl/kennzahl.scss
+++ b/src/common/kennzahl/kennzahl.scss
@@ -46,6 +46,9 @@ $lcolor13:		linear-gradient(to top, #186775 0%,#124a54 49%,#186775 50%,#186775 6
 
 
 .kennzahl {
+
+  overflow: hidden;
+
   rect.settings {
     fill-opacity: 0.7;
   }
